pushing gh-pages with update in author page

--- a/author.html
+++ b/author.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About Author Anshuman Dubey | Hidden Voices</title>
+    <title>About Author Anshuman Dubey | Tender Years</title>
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="assets/theme/css/main.css" />
     <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -21,15 +21,15 @@
               <li class="submenu ">
                 <a href="#">Book</a>
                 <ul>
-                  <li><a href="left-sidebar.html">Read a Chapter</a></li>
-                  <li><a href="book-review.html">Reviews</a></li>
-                  <li><a href="no-sidebar.html">Order</a></li>
+                  <li><a href="left-sidebar.html">Read a Poem</a></li>
+                  <li><a href="book-review.html">Testimonials</a></li>
+                  <li><a href="no-sidebar.html">Buy Now</a></li>
                 </ul>
               </li>
               <li class="submenu current">
                 <a href="#">Author</a>
                 <ul>
-                  <li><a href="about.html">His Story</a></li>
+                  <li><a href="author.html">His Story</a></li>
                   <li><a href="right-sidebar.html">Journey</a></li>
                   <li><a href="no-sidebar.html">Promise</a></li>
                   <li><a href="contact.html">Other Books</a></li>
@@ -67,9 +67,11 @@
 												<header>
 													<h3>About Anshuman</h3>
 												</header>
-												<p>He confronted the dark parts of himself and worked to banish them with enlightenment and forgiveness. His willingness to wrestle with His demons caused his angels to sing. He used pain as fuel, as a reminder of his strength.<br>What started as a tragic diagnosis turned into one of the most inspirational stories; thanks to one brave teenager’s determination to leave the world as a better place ‘In His Eyes’. At age of eight, Anshuman Dubey was diagnosed with CIDP a neurological disorder characterized by progressive weakness and impaired sensory function in the legs and arms that occurs to one in every One Lakh people. The disorder is caused by damage to the myelin sheath (The fatty covering that wraps around and protects nerve fibers) of the peripheral nerves.</p>
-<p>Anshuman the brightest brain of his class, was proficient in English, Sanskrit and Hindi.HE was a brave boy who, in spite of his prolonged and serious medical condition, continued in high spirits and left a meaningful message for others to follow:”In the end, it’s not going to matter how many breaths you took, but how you made the most of the moments you lived.” </p>
-<p>The most important thing in life is not the triumph but the struggle. The essential thing is not to have conquered but to have fought well; It is indeed True that the Flower that Blooms in adversity is the Rarest and most Beautiful of all. Anshuman you shall be Missed. you shall be Remembered Forever.</p>
+												<p><strong>He confronted the dark parts of himself and worked to banish them with enlightenment and forgiveness. His willingness to wrestle with his demons caused his angels to sing. He used pain as fuel to remind him of his strength.</strong></p>
+<p>What started as a tragic diagnosis turned into a great and inspirational story, all thanks to one brave teenager’s determination to leave the world a better place. At the age of eight, Anshuman Dubey was diagnosed with Chronic Inflammatory Demyelinating Polyneuropathy, or CIDP, a severe neurological disorder which is characterized by progressive weakness and impaired sensory function in the legs and arms and which occurs to one in every 100,000 people. 
+Anshuman the brightest student in his class; he was proficient in English, Sanskrit and Hindi. He was a brave boy who, in spite of his prolonged and serious medical condition, continued his life in high spirits and left a meaningful message for others to follow: </p>
+<p><strong>”In the end, it’s not going to matter how many breaths you took, but how you made the most of the moments you lived.”</strong> </p>
+<p>Anshuman, you will be missed. You will be remembered forever.</p>
 
 											</section>
 										</div>
@@ -115,9 +117,17 @@
 
 									<section>
 										<header>
-											<h3>Poem 1</h3>
+											<h3>LIFE</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>Life is the only time;
+										That you have to spend on Earth.
+										So commence your action now;
+										And make it worth.
+										Life is not always there;
+										It is not the question of life and death-
+										Because that rests in His hands;
+										But take a vow today, that in each moment of life-
+										You will feel cheer and gay!</p>
 										<footer>
 											<ul class="buttons">
 												<li><a href="#" class="button small">Learn More</a></li>
@@ -130,9 +140,18 @@
 
 									<section>
 										<header>
-											<h3>Poem 2 </h3>
+											<h3>Slight Age</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>Under the shade of trees;
+											In the backyard
+											Playing with ease,
+											Those moments of mother’s love
+											And father’s affectionate hug,
+											How I would run carelessly 
+											At one call of friends for fun.
+											When the curiosity arises;
+											The childhood unfolds yet a new leaf.
+										</p>
 										<footer>
 											<ul class="buttons">
 												<li><a href="#" class="button small">Learn More</a></li>
@@ -145,9 +164,19 @@
 
 									<section>
 										<header>
-											<h3>Poem 3</h3>
+											<h3>WILLPOWER</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>Make your willpower so strong;
+										That, all difficulties shy away-
+										Let the confidence be your companion;
+										So that, any trouble what may come,
+										Is left, with no option.
+										Let your determination ripe;
+										And courage and strength join.
+										Fearlessly tread ahead-
+										And climb each rung of success,
+										With patient, grit instead.
+										</p>
 										<footer>
 											<ul class="buttons">
 												<li><a href="#" class="button small">Learn More</a></li>
