--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Blog | Hidden Voices</title>
+    <title>Blog | Tender Years</title>
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="assets/theme/css/main.css" />
     <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -21,15 +21,15 @@
               <li class="submenu ">
                 <a href="#">Book</a>
                 <ul>
-                  <li><a href="left-sidebar.html">Read a Chapter</a></li>
-                  <li><a href="book-review.html">Reviews</a></li>
-                  <li><a href="no-sidebar.html">Order</a></li>
+                  <li><a href="left-sidebar.html">Read a Poem</a></li>
+                  <li><a href="book-review.html">Testimonials</a></li>
+                  <li><a href="no-sidebar.html">Buy Now</a></li>
                 </ul>
               </li>
               <li class="submenu ">
                 <a href="#">Author</a>
                 <ul>
-                  <li><a href="about.html">His Story</a></li>
+                  <li><a href="author.html">His Story</a></li>
                   <li><a href="right-sidebar.html">Journey</a></li>
                   <li><a href="no-sidebar.html">Promise</a></li>
                   <li><a href="contact.html">Other Books</a></li>
