Updated testimonial page.

--- a/journey.html
+++ b/journey.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Book reviews and testimonials for Tender Years | Tender Years</title>
+    <title>Journey | Tender Years</title>
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="assets/theme/css/main.css" />
     <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -18,14 +18,10 @@
           <nav id="nav">
             <ul>
               <li class=""><a href="index.html">Home</a></li>
-              <li class="submenu current">
+              <li class="submenu ">
                 <a href="#">Book</a>
                 <ul>
-<<<<<<< HEAD
-                  <li><a href="left-sidebar.html">Read a Poem</a></li>
-=======
                   <li><a href="read-a-poem.html">Read a Poem</a></li>
->>>>>>> cecbf498f3f55184e998995f9288ee708fa4ba54
                   <li><a href="book-review.html">Testimonials</a></li>
                   <li><a href="no-sidebar.html">Buy Now</a></li>
                 </ul>
@@ -34,11 +30,7 @@
                 <a href="#">Author</a>
                 <ul>
                   <li><a href="author.html">His Story</a></li>
-<<<<<<< HEAD
-                  <li><a href="right-sidebar.html">Journey</a></li>
-=======
                   <li><a href="journey.html">Journey</a></li>
->>>>>>> cecbf498f3f55184e998995f9288ee708fa4ba54
                   <li><a href="no-sidebar.html">Promise</a></li>
                   <li><a href="contact.html">Other Books</a></li>
                 </ul>
@@ -57,8 +49,8 @@
 
 					<header class="special container">
 						<span class="icon fa-thumbs-up"></span>
-						<h2>Reviews and  <strong>Testimonials</strong></h2>
-						<p>What everyone is saying about the book</p>
+						<h2>Journey</h2>
+						<p>The Story of Anshuman Dubey and the Tender Years Project</p>
 					</header>
 
 					<!-- One -->
@@ -69,11 +61,15 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Dolore Amet Consequat</h3>
+											<h3>The year is 2006.</h3>
 										</header>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum massa. Morbi eu faucibus massa. Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique. Sed id sem et massa ornare pellentesque. Maecenas pharetra porta accumsan. </p>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus, non hendrerit ipsum arcu tristique est.</p>
+										<p>There is a 12 year old boy sitting in a classroom in St. Paul’s School, India. It is recess time, and all of his friends are outside playing in the playground. The boy watches, wishing he could be outside with them.</p>
+										<p>He takes a deep breath and moves his head down. Even such a simple movement as this is a challenge for him.</p>
+										<p>The boy’s name is Anshuman Dubey. In 2002 at the age of 8, Anshuman was diagnosed with a neuromuscular disorder known as Chronic Inflammatory Demyelinating Polyneuropathy, or CIDP. CIDP is a rare disorder of the peripheral nerves characterized by gradually increasing weakness of a person’s legs and arms. Although this disease is very severe, Anshuman did not cry about it and instead used his unique experiences to try to inspire others. In that classroom in 2006, Anshuman wrote his first poem, “Veer Parichay.”
+										<p>3 years later in 2009, Anshuman finished his book, Chhoti Si Umar, a collection of 30 poems in Hindi and English. The book was published in India and received very well by many people, including Dr. APJ Abdul Kalam, a former president of India. Following the success of Chhoti Si Umar, there was an overwhelming demand for it to be translated and published in English. Unfortunately, Anshuman passed away in 2011 and was not able to experience this.</p>
+										<p>The year is 2015. Two high school boys in Virginia, USA, read Chhoti Si Umar and are inspired to spread Anshuman’s message to more people. The project “Tender Years” is created.</p>
+
+</p>
 									</section>
 								</div>
 
