--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <h2>The Book  <strong>“TENDER YEARS”</strong> is a translated version of “CHHOTI SI UMAR" in English.</h2>
                   </header>
                   <p>This book is a part of libraries of most public schools across India. This is a testament to how many people were touched with his story.</p>
-                  <p>The book is a highly inspirational and motivational power to change who we are. We are confident that this book will help many people change their lives, irrespective of age.</p>
+                  <p>The book is highly inspirational and motivational, and has the power to change who we are. We are confident that this book will help many people change their lives, irrespective of age.</p>
                   <footer>
                     <ul class="buttons">
                       <li><a href="author.html" class="button">Find Out More</a></li>
