--- a/author.html
+++ b/author.html
@@ -93,7 +93,7 @@ Anshuman the brightest student in his class; he was proficient in English, Sansk
 												Dr. A.P.J.Abdul Kalam <br><cite>Former President of India</cite></p>
 												<footer>
 													<ul class="buttons">
-														<li><a href="#" class="button small">Learn More</a></li>
+														<li><a href="book-review.html" class="button small">Learn More</a></li>
 													</ul>
 												</footer>
 											</section>
