--- a/author.html
+++ b/author.html
@@ -73,7 +73,7 @@
 												</header>
 												<p><strong>He confronted the dark parts of himself and worked to banish them with enlightenment and forgiveness. His willingness to wrestle with his demons caused his angels to sing. He used pain as fuel to remind him of his strength.</strong></p>
 <p>What started as a tragic diagnosis turned into a great and inspirational story, all thanks to one brave teenager’s determination to leave the world a better place. At the age of eight, Anshuman Dubey was diagnosed with Chronic Inflammatory Demyelinating Polyneuropathy, or CIDP, a severe neurological disorder which is characterized by progressive weakness and impaired sensory function in the legs and arms and which occurs to one in every 100,000 people. 
-Anshuman the brightest student in his class; he was proficient in English, Sanskrit and Hindi. He was a brave boy who, in spite of his prolonged and serious medical condition, continued his life in high spirits and left a meaningful message for others to follow: </p>
+Anshuman was the brightest student in his class; he was proficient in English, Sanskrit, and Hindi. He was a brave boy who, in spite of his prolonged and serious medical condition, continued his life in high spirits and left a meaningful message for others to follow: </p>
 <p><strong>”In the end, it’s not going to matter how many breaths you took, but how you made the most of the moments you lived.”</strong> </p>
 <p>Anshuman, you will be missed. You will be remembered forever.</p>
 
