--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <br />
             written by late master Anshuman Dubey</h2>
 
-            <p>Anshuman Dubey passed away at the age of sixteen from a neuromuscular disorder known as CIDP, or Chronic Inflammatory Demyelinating Polyneuropathy. CIDP affects the peripheral nerves of the body and causes gradual weakness. It also causes loss senses and reflexes. Although CIDP is treatable, it is very difficult and expensive to get a treatment in the rural area where Anshuman lived. However, even though Anshuman was incapacitated for a long time, he was able to express his thoughts and feelings through this book of poems. He wrote the book to inspire us to be courageous and overcome the many challenges of life.
+            <p>Anshuman Dubey passed away at the age of sixteen from a neuromuscular disorder known as CIDP, or Chronic Inflammatory Demyelinating Polyneuropathy. CIDP affects the peripheral nerves of the body and causes gradual weakness. It also causes loss senses and reflexes. Although CIDP is treatable, it is very difficult and expensive to get a treatment in the area where Anshuman lived. However, even though Anshuman was incapacitated for a long time, he was able to express his thoughts and feelings through this book of poems. He wrote the book to inspire us to be courageous and overcome the many challenges of life.
 
 
            </p>
