--- a/author.html
+++ b/author.html
@@ -134,7 +134,7 @@ Anshuman was the brightest student in his class; he was proficient in English, S
 										You will feel cheer and gay!</p>
 										<footer>
 											<ul class="buttons">
-												<li><a href="#" class="button small">Learn More</a></li>
+												<li><a href="life.html" class="button small">Learn More</a></li>
 											</ul>
 										</footer>
 									</section>
@@ -158,7 +158,7 @@ Anshuman was the brightest student in his class; he was proficient in English, S
 										</p>
 										<footer>
 											<ul class="buttons">
-												<li><a href="#" class="button small">Learn More</a></li>
+												<li><a href="read-a-poem.html" class="button small">Learn More</a></li>
 											</ul>
 										</footer>
 									</section>
@@ -183,7 +183,7 @@ Anshuman was the brightest student in his class; he was proficient in English, S
 										</p>
 										<footer>
 											<ul class="buttons">
-												<li><a href="#" class="button small">Learn More</a></li>
+												<li><a href="journey.html" class="button small">Learn More</a></li>
 											</ul>
 										</footer>
 									</section>
