--- a/author.html
+++ b/author.html
@@ -67,7 +67,7 @@
 									<!-- Content -->
 										<div class="content">
 											<section>
-												<a href="#" class="image featured"><img src="https://placehold.it/480x210" alt="" /></a>
+												<a href="#" class="image featured"><img src="anshuman-480x230.jpg alt="" /></a>
 												<header>
 													<h3>About Anshuman</h3>
 												</header>
