--- a/author.html
+++ b/author.html
@@ -67,7 +67,7 @@
 									<!-- Content -->
 										<div class="content">
 											<section>
-												<a href="#" class="image featured"><img src="/tender-years/assets/images/anshuman-480x230.jpg alt="" /></a>
+												<a href="#" class="image featured"><img src="assets/images/anshuman-480x230.jpg" alt="" /></a>
 												<header>
 													<h3>About Anshuman</h3>
 												</header>
