--- a/author.html
+++ b/author.html
@@ -86,6 +86,7 @@ Anshuman was the brightest student in his class; he was proficient in English, S
 									<!-- Sidebar -->
 										<div class="sidebar">
 											<section>
+											<a href="#" class="image featured"><img src="assets/images/dream-destination.jpg"alt=""/></a>
 												<header>
 													<h3></h3>
 												</header>
