--- a/book-review.html
+++ b/book-review.html
@@ -180,6 +180,40 @@ With kind regards</p>
 
 							</div>
 						</section>
+						<section class="wrapper style4 container">
+
+							<div class="row 150%">
+								<div class="8u 12u(narrower)">
+
+									<!-- Content -->
+										<div class="content">
+											<section>
+												</header>
+<p>Fifteen-year-old Anshuman Dubey, suffering from a rare neurological disorder, is a living example of grit and determination. His book Choti si Umar, a collection of 30 poems, has been selected for an award by Patiala Hindi Sahitya Samiti and is a part of libraries of many public shools across India.</p>
+
+											</section>
+										</div>
+
+								</div>
+								<div class="4u 12u(narrower)">
+
+									<!-- Sidebar -->
+										<div class="sidebar"><section>
+										<br>
+										<br>
+										<br>
+												<div>
+                   									<a href="assets/images/Credentials-0131.jpg" data-lightbox="Indore Plus" data-title="A story about Anshuman from the Indore Plus Newspaper." style="border-bottom:none;"><img src="assets/images/timesofindia.jpeg" alt="A story about Anshuman from the Indore Plus Newspaper." style="width:100%"></a>
+												</div>	
+													
+											</section>
+
+										</div>
+												
+								</div>
+
+							</div>
+						</section>
 
 				</article>
 
