--- a/book-review.html
+++ b/book-review.html
@@ -201,7 +201,7 @@ With kind regards</p>
 										<div class="sidebar"><section>
 										
 												<div>
-                   									<a href="assets/images/Credentials-0131.jpg" data-lightbox="Indore Plus" data-title="A story about Anshuman from the Indore Plus Newspaper." style="border-bottom:none;"><img src="assets/images/timesofindia.jpeg" alt="A story about Anshuman from the Indore Plus Newspaper." style="width:100%"></a>
+                   									<a href="assets/images/timesofindia.jpeg" data-lightbox="Indore Plus" data-title="A story about Anshuman from the Indore Plus Newspaper." style="border-bottom:none;"><img src="assets/images/timesofindia.jpeg" alt="A story about Anshuman from the Indore Plus Newspaper." style="width:100%"></a>
 												</div>	
 													
 											</section>
